<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/content_padding_top"
    android:paddingBottom="@dimen/content_padding_bottom"
    android:paddingLeft="@dimen/content_padding_left"
    android:paddingRight="@dimen/content_padding_right"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/Wizard.EditText"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        style="@style/Wizard.EditText"
        />

  </android.support.design.widget.TextInputLayout>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/master_password_explanation"
      style="@style/Explanation"
      />

</LinearLayout>